# w2v

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: get_vocab.r  params.r  reactor.r  w2v-package.r  w2v.r
man/: get_vocab.Rd  w2v-package.Rd  w2v.Rd  w2v_params.Rd
scripts/: perf.txt  plot.r
src/: Makevars.in  Rw2v.h  get_vocab.cpp  w2v.cpp  w2v_native.c
src/cblas/: LICENSE.txt  cblas_f77.h  cblas_xerbla.c
src/pWord2Vec/: CHANGES  blas.h  blas_backend.h.in  pWord2Vec.h  pWord2Vec_mpi.cpp  types.h
